--- a/buzz.html
+++ b/buzz.html
@@ -4,10 +4,10 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <meta name="theme-color" content="#2561D1" />
-  <link rel="manifest" href="/manifest.webmanifest" />
-  <link rel="apple-touch-icon" href="/assets/icons/icon-192.png" />
+  <link rel="manifest" href="manifest.webmanifest" />
+  <link rel="apple-touch-icon" href="assets/icons/icon-192.png" />
   <title>Buzz Alert</title>
-  <link rel="stylesheet" href="/assets/tailwind.css">
+  <link rel="stylesheet" href="assets/tailwind.css">
   <link href="https://fonts.googleapis.com/css2?family=Braah+One&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css" crossorigin="anonymous" />
   <style>
@@ -248,6 +248,6 @@
   });
 </script>
 
-<script src="/register-sw.js"></script>
+<script src="register-sw.js"></script>
 </body>
 </html>
