--- a/cartesecret.html
+++ b/cartesecret.html
@@ -4,10 +4,10 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <meta name="theme-color" content="#2561D1" />
-  <link rel="manifest" href="/manifest.webmanifest" />
-  <link rel="apple-touch-icon" href="/assets/icons/icon-192.png" />
+  <link rel="manifest" href="manifest.webmanifest" />
+  <link rel="apple-touch-icon" href="assets/icons/icon-192.png" />
   <title>Taper votre nom</title>
-  <link rel="stylesheet" href="/assets/tailwind.css">
+  <link rel="stylesheet" href="assets/tailwind.css">
   <link href="https://fonts.googleapis.com/css2?family=Braah+One&display=swap" rel="stylesheet">
   <style>
     body {
@@ -70,6 +70,6 @@
       secretScreen.classList.remove('hidden');
     });
   </script>
-  <script src="/register-sw.js"></script>
+  <script src="register-sw.js"></script>
 </body>
 </html>
