--- a/test.html
+++ b/test.html
@@ -3,11 +3,11 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="theme-color" content="#2561D1" />
-  <link rel="manifest" href="/manifest.webmanifest" />
-  <link rel="apple-touch-icon" href="/assets/icons/icon-192.png" />
+  <link rel="manifest" href="manifest.webmanifest" />
+  <link rel="apple-touch-icon" href="assets/icons/icon-192.png" />
   <title>Test Secret Story avec Voix</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <link rel="stylesheet" href="/assets/tailwind.css">
+  <link rel="stylesheet" href="assets/tailwind.css">
   <link href="https://fonts.googleapis.com/css2?family=Braah+One&display=swap" rel="stylesheet">
   <!-- ResponsiveVoice -->
   <script src="https://code.responsivevoice.org/responsivevoice.js?key=YOUR_KEY"></script>
@@ -164,6 +164,6 @@
   }
 </script>
 
-<script src="/register-sw.js"></script>
+<script src="register-sw.js"></script>
 </body>
 </html>
