--- a/cartesecret.html
+++ b/cartesecret.html
@@ -6,57 +6,55 @@
   <meta name="theme-color" content="#2561D1" />
   <link rel="manifest" href="manifest.webmanifest" />
   <link rel="apple-touch-icon" href="assets/icons/icon-192.png" />
-  <title>Taper votre nom</title>
+  <title>Découvre ton secret</title>
   <link rel="stylesheet" href="assets/tailwind.css">
   <link href="https://fonts.googleapis.com/css2?family=Braah+One&display=swap" rel="stylesheet">
   <style>
-    body {
-      font-family: 'Braah One', sans-serif;
-    }
+    body { font-family: 'Braah One', sans-serif; }
   </style>
 </head>
 <body class="bg-[#2561D1] text-white w-screen h-screen flex flex-col items-center justify-start relative">
 
   <!-- Header -->
-  <header class="flex items-center p-6">
+  <header class="flex items-center p-6 w-full">
     <img src="assets/logo.png" alt="Secret Story Logo" class="w-[4.5rem]" />
-    <h1 class="text-[1rem] mx-4 text-black bg-white p-4 rounded-xl">Chaque joueur choisit une carte</h1>
+    <h1 class="text-[1rem] mx-4 text-black bg-white p-4 rounded-xl">Ta carte secrète</h1>
+    <span id="playerTag" class="ml-auto text-sm bg-black/40 px-3 py-1 rounded"></span>
   </header>
 
   <!-- Écran principal -->
-  <div id="mainScreen" class="flex flex-col items-center mt-10">
-    <!-- Carte rose -->
+  <div id="mainScreen" class="flex flex-col items-center mt-10 w-full px-4">
     <div class="bg-[radial-gradient(50%_50%_at_50%_50%,_#FF68B7_0%,_#FF049C_100%)]
                 border-[3px] border-white shadow-[7px_5px_4px_rgba(0,0,0,0.25)]
                 rounded-[10px] w-[80%] max-w-md px-6 py-8 text-center">
-      <img src="assets/logo.png" alt="Secret Story Logo" class="w-[14rem] m-auto my-16" />
-      <h2 class="text-black text-lg mb-4">Taper votre nom :</h2>
-      <input type="text" placeholder="Votre nom"
-             class="w-full px-4 py-2 rounded-xl text-black bg-white text-center focus:outline-none" />
+      <img src="assets/logo.png" alt="Secret Story Logo" class="w-[14rem] m-auto my-10" />
+      <h2 class="text-black text-lg mb-2">Bienvenue <span id="playerNameLabel"></span></h2>
+      <p class="text-white/80 mb-4 text-sm">Appuie pour découvrir ton secret et garde-le pour toi.</p>
+      <button id="revealBtn"
+              class="mt-4 bg-pink-500 text-white px-6 py-3 rounded-full text-[1.2rem] shadow-md hover:bg-pink-600 transition">
+        Découvrir mon secret
+      </button>
     </div>
-
-    <!-- Bouton -->
-    <button id="revealBtn"
-            class="mt-10 bg-pink-500 text-white px-6 py-3 rounded-full text-[1.5rem] shadow-md hover:bg-pink-600 transition">
-      Découvrir mon secret
-    </button>
   </div>
 
   <!-- Écran secret -->
-  <div id="secretScreen" class="hidden absolute inset-0 bg-[#0B1B4F] flex flex-col items-center justify-center text-center ">
-    <div class="bg-white border-[3px] border-pink-500 rounded-xl shadow-lg px-6 py-8 max-w-md w-[80%] h-[60%] mx-6 my-16 ">
-      <h2 class="text-black text-lg mb-4">TON SECRET :</h2>
-      <p class="text-pink-500 text-xl font-bold mb-6">J'AI ÉTÉ AGENT SECRET PENDANT 2 ANS</p>
-      <img src="assets/secret.png" alt="Icône secret" class="h-[65%] mx-auto mb-6" />
+  <div id="secretScreen" class="hidden absolute inset-0 bg-[#0B1B4F] flex flex-col items-center justify-center text-center px-6">
+    <div class="bg-white border-[3px] border-pink-500 rounded-xl shadow-lg px-6 py-8 max-w-md w-[90%] mx-6">
+      <h2 class="text-black text-lg mb-2">TON SECRET :</h2>
+      <p id="secretText" class="text-pink-500 text-xl font-bold mb-4"></p>
+      <div class="text-left text-black space-y-2">
+        <p><strong>Indice texte :</strong> <span id="hintText"></span></p>
+        <p><strong>Indice sonore :</strong> <span id="hintSound"></span></p>
+        <p><strong>Indice image :</strong> <span id="hintImage"></span></p>
+      </div>
     </div>
 
-    <div class="bg-black w-full h-[30%]">
-    <img src="assets/oeil.png" alt="Secret Story Logo" class="w-[10rem] relative bottom-8 mx-auto mb-6" />
-      <a href="maingame.html" class="inline-block bg-pink-500 text-white px-6 py-3 rounded-full text-[1.5rem] shadow-md hover:bg-pink-600 transition">
+    <div class="bg-black w-full h-[30%] flex flex-col items-center justify-center gap-4">
+      <img src="assets/oeil.png" alt="Secret Story Logo" class="w-[8rem] mx-auto" />
+      <a href="choisircarte.html" class="inline-block bg-pink-500 text-white px-6 py-3 rounded-full text-[1.2rem] shadow-md hover:bg-pink-600 transition">
         J'ai lu mon secret
       </a>
     </div>
-    
   </div>
 
   <!-- JS logique -->
@@ -64,10 +62,41 @@
     const revealBtn = document.getElementById('revealBtn');
     const mainScreen = document.getElementById('mainScreen');
     const secretScreen = document.getElementById('secretScreen');
+    const playerNameLabel = document.getElementById('playerNameLabel');
+    const playerTag = document.getElementById('playerTag');
+    const secretText = document.getElementById('secretText');
+    const hintText = document.getElementById('hintText');
+    const hintSound = document.getElementById('hintSound');
+    const hintImage = document.getElementById('hintImage');
+
+    const players = JSON.parse(localStorage.getItem('players') || '[]');
+    const assignments = JSON.parse(localStorage.getItem('secretAssignments') || '[]');
+    const index = Number(localStorage.getItem('currentPlayerIndex'));
+    const player = players[index];
+    const secret = assignments[index];
+
+    const showFallback = () => {
+      mainScreen.innerHTML = '<p class="text-center text-white px-4">Aucune carte n\'est sélectionnée. Retour au choix des cartes.</p><div class="mt-4"><a href="choisircarte.html" class="underline">Revenir</a></div>';
+      revealBtn.style.display = 'none';
+    };
+
+    if (!player || !secret) {
+      showFallback();
+    } else {
+      playerNameLabel.textContent = player.name;
+      playerTag.textContent = `Carte ${index + 1}`;
+      secretText.textContent = secret.title;
+      hintText.textContent = secret.textHint;
+      hintSound.textContent = secret.audioHint;
+      hintImage.textContent = secret.imageHint;
+    }
 
     revealBtn.addEventListener('click', () => {
+      if (!player || !secret) return;
       mainScreen.classList.add('hidden');
       secretScreen.classList.remove('hidden');
+      players[index] = { ...player, seen: true };
+      localStorage.setItem('players', JSON.stringify(players));
     });
   </script>
   <script src="register-sw.js"></script>
