--- a/cartesecret.html
+++ b/cartesecret.html
@@ -13,51 +13,62 @@
     body { font-family: 'Braah One', sans-serif; }
   </style>
 </head>
-<body class="bg-[#2561D1] text-white w-screen h-screen flex flex-col items-center justify-start relative">
+<body class="bg-[#0B1B4F] text-white w-screen h-screen flex flex-col items-center justify-start relative">
 
   <!-- Header -->
-  <header class="flex items-center p-6 w-full">
+  <header class="flex items-center p-4 w-full">
     <img src="assets/logo.png" alt="Secret Story Logo" class="w-[4.5rem]" />
-    <h1 class="text-[1rem] mx-4 text-black bg-white p-4 rounded-xl">Ta carte secrète</h1>
-    <span id="playerTag" class="ml-auto text-sm bg-black/40 px-3 py-1 rounded"></span>
+    <div class="flex flex-col flex-1 gap-1 ml-3">
+      <h1 class="text-[1rem] text-black bg-white px-3 py-2 rounded-xl">Ta carte secrète</h1>
+      <div class="text-xs text-white/80 flex items-center gap-2">
+        <span id="playerTag" class="bg-white/10 px-3 py-1 rounded">Carte --</span>
+        <a href="choisircarte.html" class="underline text-white/80">Retour cartes</a>
+      </div>
+    </div>
   </header>
 
   <!-- Écran principal -->
-  <div id="mainScreen" class="flex flex-col items-center mt-10 w-full px-4">
+  <div id="mainScreen" class="flex flex-col items-center mt-8 w-full px-4">
     <div class="bg-[radial-gradient(50%_50%_at_50%_50%,_#FF68B7_0%,_#FF049C_100%)]
                 border-[3px] border-white shadow-[7px_5px_4px_rgba(0,0,0,0.25)]
-                rounded-[10px] w-[80%] max-w-md px-6 py-8 text-center">
-      <img src="assets/logo.png" alt="Secret Story Logo" class="w-[14rem] m-auto my-10" />
+                rounded-[10px] w-[90%] max-w-md px-6 py-8 text-center">
+      <img src="assets/logo.png" alt="Secret Story Logo" class="w-[12rem] m-auto my-8" />
       <h2 class="text-black text-lg mb-2">Bienvenue <span id="playerNameLabel"></span></h2>
       <p class="text-white/80 mb-4 text-sm">Appuie pour découvrir ton secret et garde-le pour toi.</p>
       <button id="revealBtn"
-              class="mt-4 bg-pink-500 text-white px-6 py-3 rounded-full text-[1.2rem] shadow-md hover:bg-pink-600 transition">
+              class="mt-4 bg-white text-pink-600 px-6 py-3 rounded-full text-[1.1rem] shadow-md hover:bg-gray-100 transition">
         Découvrir mon secret
       </button>
     </div>
   </div>
 
   <!-- Écran secret -->
-  <div id="secretScreen" class="hidden absolute inset-0 bg-[#0B1B4F] flex flex-col items-center justify-center text-center px-6">
+  <div id="secretScreen" class="hidden absolute inset-0 flex flex-col items-center justify-center text-center px-6 gap-6">
     <div class="bg-white border-[3px] border-pink-500 rounded-xl shadow-lg px-6 py-8 max-w-md w-[90%] mx-6">
       <h2 class="text-black text-lg mb-2">TON SECRET :</h2>
       <p id="secretText" class="text-pink-500 text-xl font-bold mb-4"></p>
-      <div class="text-left text-black space-y-2">
+      <div class="text-left text-black space-y-2 text-sm">
         <p><strong>Indice texte :</strong> <span id="hintText"></span></p>
         <p><strong>Indice sonore :</strong> <span id="hintSound"></span></p>
         <p><strong>Indice image :</strong> <span id="hintImage"></span></p>
       </div>
     </div>
 
-    <div class="bg-black w-full h-[30%] flex flex-col items-center justify-center gap-4">
+    <div class="w-full flex flex-col items-center gap-3">
       <img src="assets/oeil.png" alt="Secret Story Logo" class="w-[8rem] mx-auto" />
-      <a href="choisircarte.html" class="inline-block bg-pink-500 text-white px-6 py-3 rounded-full text-[1.2rem] shadow-md hover:bg-pink-600 transition">
-        J'ai lu mon secret
-      </a>
+      <div class="flex gap-3 w-full max-w-md px-2">
+        <a href="choisircarte.html" class="flex-1 inline-block bg-white text-pink-600 px-4 py-3 rounded-full text-[1rem] shadow-md hover:bg-gray-100 transition text-center">
+          Retour cartes
+        </a>
+        <a href="maingame.html" class="flex-1 inline-block bg-pink-500 text-white px-4 py-3 rounded-full text-[1rem] shadow-md hover:bg-pink-600 transition text-center">
+          Prêt à jouer
+        </a>
+      </div>
     </div>
   </div>
 
   <!-- JS logique -->
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.2/gsap.min.js" integrity="sha512-2pKXCBfbNILIr05oig3NbS1Ry6j8Tz6kKI/hX3sI5Yucs5cjox96D65gis6pZeRAEIJ5zsxFrqxbPjzvY4xX2Q==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
   <script>
     const revealBtn = document.getElementById('revealBtn');
     const mainScreen = document.getElementById('mainScreen');
@@ -76,11 +87,11 @@
     const secret = assignments[index];
 
     const showFallback = () => {
-      mainScreen.innerHTML = '<p class="text-center text-white px-4">Aucune carte n\'est sélectionnée. Retour au choix des cartes.</p><div class="mt-4"><a href="choisircarte.html" class="underline">Revenir</a></div>';
+      mainScreen.innerHTML = '<p class="text-center text-white px-4">Aucune carte n\'est selectionnee. Retour au choix des cartes.</p><div class="mt-4"><a href="choisircarte.html" class="underline">Revenir</a></div>';
       revealBtn.style.display = 'none';
     };
 
-    if (!player || !secret) {
+    if (!player || !secret || Number.isNaN(index)) {
       showFallback();
     } else {
       playerNameLabel.textContent = player.name;
@@ -89,12 +100,17 @@
       hintText.textContent = secret.textHint;
       hintSound.textContent = secret.audioHint;
       hintImage.textContent = secret.imageHint;
+      gsap.from(mainScreen.querySelector('div'), { scale: 0.95, opacity: 0, duration: 0.4, ease: "power2.out" });
     }
 
     revealBtn.addEventListener('click', () => {
       if (!player || !secret) return;
-      mainScreen.classList.add('hidden');
-      secretScreen.classList.remove('hidden');
+      gsap.to(mainScreen, { opacity: 0, duration: 0.3 });
+      setTimeout(() => {
+        mainScreen.classList.add('hidden');
+        secretScreen.classList.remove('hidden');
+        gsap.from(secretScreen.querySelector('div'), { y: 20, opacity: 0, duration: 0.35, ease: "power2.out" });
+      }, 250);
       players[index] = { ...player, seen: true };
       localStorage.setItem('players', JSON.stringify(players));
     });
